--- a/vinyl-style/package.json
+++ b/vinyl-style/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://boiler8.github.io/Vinyl-Style/vinyl-style/index.html",
   "name": "vinyl-style",
   "private": true,
   "version": "0.0.1",
@@ -10,7 +11,9 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@capacitor/app": "5.0.7",
@@ -50,6 +53,7 @@
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^6.1.1",
     "jsdom": "^22.1.0",
     "nodemon": "^3.1.0",
     "terser": "^5.4.0",
